Rename activity to external_activity
