# gen/http/activity/server/paths.go
@@ -1,18 +1,0 @@
-// Code generated by goa v3.0.7, DO NOT EDIT.
-//
-// HTTP request path constructors for the Activity service.
-//
-// Command:
-// $ goa gen github.com/tonouchi510/Jeeek/design
-
-package server
-
-// FetchQiitaArticleActivityPath returns the URL path to the Activity service Fetch qiita article HTTP endpoint.
-func FetchQiitaArticleActivityPath() string {
-	return "/v1/activity/qiita"
-}
-
-// PickOutPastActivityOfQiitaActivityPath returns the URL path to the Activity service Pick out past activity of qiita HTTP endpoint.
-func PickOutPastActivityOfQiitaActivityPath() string {
-	return "/v1/activity/qiita/initialization"
-}
