# gen/http/activity/server/types.go
@@ -1,54 +1,0 @@
-// Code generated by goa v3.0.7, DO NOT EDIT.
-//
-// Activity HTTP server types
-//
-// Command:
-// $ goa gen github.com/tonouchi510/Jeeek/design
-
-package server
-
-import (
-	activity "github.com/tonouchi510/Jeeek/gen/activity"
-)
-
-// FetchQiitaArticleUnauthorizedResponseBody is the type of the "Activity"
-// service "Fetch qiita article" endpoint HTTP response body for the
-// "unauthorized" error.
-type FetchQiitaArticleUnauthorizedResponseBody string
-
-// PickOutPastActivityOfQiitaUnauthorizedResponseBody is the type of the
-// "Activity" service "Pick out past activity of qiita" endpoint HTTP response
-// body for the "unauthorized" error.
-type PickOutPastActivityOfQiitaUnauthorizedResponseBody string
-
-// NewFetchQiitaArticleUnauthorizedResponseBody builds the HTTP response body
-// from the result of the "Fetch qiita article" endpoint of the "Activity"
-// service.
-func NewFetchQiitaArticleUnauthorizedResponseBody(res activity.Unauthorized) FetchQiitaArticleUnauthorizedResponseBody {
-	body := FetchQiitaArticleUnauthorizedResponseBody(res)
-	return body
-}
-
-// NewPickOutPastActivityOfQiitaUnauthorizedResponseBody builds the HTTP
-// response body from the result of the "Pick out past activity of qiita"
-// endpoint of the "Activity" service.
-func NewPickOutPastActivityOfQiitaUnauthorizedResponseBody(res activity.Unauthorized) PickOutPastActivityOfQiitaUnauthorizedResponseBody {
-	body := PickOutPastActivityOfQiitaUnauthorizedResponseBody(res)
-	return body
-}
-
-// NewFetchQiitaArticleSessionTokenPayload builds a Activity service Fetch
-// qiita article endpoint payload.
-func NewFetchQiitaArticleSessionTokenPayload(token *string) *activity.SessionTokenPayload {
-	return &activity.SessionTokenPayload{
-		Token: token,
-	}
-}
-
-// NewPickOutPastActivityOfQiitaSessionTokenPayload builds a Activity service
-// Pick out past activity of qiita endpoint payload.
-func NewPickOutPastActivityOfQiitaSessionTokenPayload(token *string) *activity.SessionTokenPayload {
-	return &activity.SessionTokenPayload{
-		Token: token,
-	}
-}
