# gen/http/external_activity/server/encode_decode.go
@@ -1,6 +1,6 @@
 // Code generated by goa v3.0.7, DO NOT EDIT.
 //
-// Activity HTTP server encoders and decoders
+// ExternalActivity HTTP server encoders and decoders
 //
 // Command:
 // $ goa gen github.com/tonouchi510/Jeeek/design
@@ -12,12 +12,12 @@ import (
 	"net/http"
 	"strings"
 
-	activity "github.com/tonouchi510/Jeeek/gen/activity"
+	externalactivity "github.com/tonouchi510/Jeeek/gen/external_activity"
 	goahttp "goa.design/goa/v3/http"
 )
 
 // EncodeFetchQiitaArticleResponse returns an encoder for responses returned by
-// the Activity Fetch qiita article endpoint.
+// the ExternalActivity Fetch qiita article endpoint.
 func EncodeFetchQiitaArticleResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
 	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
 		w.WriteHeader(http.StatusOK)
@@ -26,7 +26,7 @@ func EncodeFetchQiitaArticleResponse(encoder func(context.Context, http.Response
 }
 
 // DecodeFetchQiitaArticleRequest returns a decoder for requests sent to the
-// Activity Fetch qiita article endpoint.
+// ExternalActivity Fetch qiita article endpoint.
 func DecodeFetchQiitaArticleRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
 	return func(r *http.Request) (interface{}, error) {
 		var (
@@ -50,7 +50,7 @@ func DecodeFetchQiitaArticleRequest(mux goahttp.Muxer, decoder func(*http.Reques
 }
 
 // EncodeFetchQiitaArticleError returns an encoder for errors returned by the
-// Fetch qiita article Activity endpoint.
+// Fetch qiita article ExternalActivity endpoint.
 func EncodeFetchQiitaArticleError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, error) error {
 	encodeError := goahttp.ErrorEncoder(encoder)
 	return func(ctx context.Context, w http.ResponseWriter, v error) error {
@@ -60,7 +60,7 @@ func EncodeFetchQiitaArticleError(encoder func(context.Context, http.ResponseWri
 		}
 		switch en.ErrorName() {
 		case "unauthorized":
-			res := v.(activity.Unauthorized)
+			res := v.(externalactivity.Unauthorized)
 			enc := encoder(ctx, w)
 			body := NewFetchQiitaArticleUnauthorizedResponseBody(res)
 			w.Header().Set("goa-error", "unauthorized")
@@ -73,7 +73,7 @@ func EncodeFetchQiitaArticleError(encoder func(context.Context, http.ResponseWri
 }
 
 // EncodePickOutPastActivityOfQiitaResponse returns an encoder for responses
-// returned by the Activity Pick out past activity of qiita endpoint.
+// returned by the ExternalActivity Pick out past activity of qiita endpoint.
 func EncodePickOutPastActivityOfQiitaResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
 	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
 		w.WriteHeader(http.StatusOK)
@@ -82,7 +82,7 @@ func EncodePickOutPastActivityOfQiitaResponse(encoder func(context.Context, http
 }
 
 // DecodePickOutPastActivityOfQiitaRequest returns a decoder for requests sent
-// to the Activity Pick out past activity of qiita endpoint.
+// to the ExternalActivity Pick out past activity of qiita endpoint.
 func DecodePickOutPastActivityOfQiitaRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
 	return func(r *http.Request) (interface{}, error) {
 		var (
@@ -106,7 +106,7 @@ func DecodePickOutPastActivityOfQiitaRequest(mux goahttp.Muxer, decoder func(*ht
 }
 
 // EncodePickOutPastActivityOfQiitaError returns an encoder for errors returned
-// by the Pick out past activity of qiita Activity endpoint.
+// by the Pick out past activity of qiita ExternalActivity endpoint.
 func EncodePickOutPastActivityOfQiitaError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, error) error {
 	encodeError := goahttp.ErrorEncoder(encoder)
 	return func(ctx context.Context, w http.ResponseWriter, v error) error {
@@ -116,7 +116,7 @@ func EncodePickOutPastActivityOfQiitaError(encoder func(context.Context, http.Re
 		}
 		switch en.ErrorName() {
 		case "unauthorized":
-			res := v.(activity.Unauthorized)
+			res := v.(externalactivity.Unauthorized)
 			enc := encoder(ctx, w)
 			body := NewPickOutPastActivityOfQiitaUnauthorizedResponseBody(res)
 			w.Header().Set("goa-error", "unauthorized")
